--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ body {
   }
   #nav-list > li{
     margin: 0 40px;
+    text-align: center;
   }
   #contacts-header-main {
     margin: 200px 0 0 0;
