--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ body {
   }
   #nav-list > li {
     margin: 0 40px;
-    text-align: center;
+    background-color: blue;
   }
   #contacts-header-main {
     margin: 200px 0 0 0;
@@ -250,7 +250,6 @@ body {
   }
   #nav-list {
     padding-right: 0px;
-    text-align: center;
   }
 }
 
